Commit with some changes HW9

--- a/src/main/resources/static/test/index2.html
+++ b/src/main/resources/static/test/index2.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link href="style.css" rel="stylesheet" type="text/css">
+    <script src="script.js"></script>
     <title>Home page</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-<p>
-    HELLO WORLD
-</p>
+<div class="test">
+    <p id="result">
+        RESULT
+    </p>
+</div>
+
+<form name="test" >
+    <p><b>a:</b><br>
+        <label>
+            <input id="a" type="number" size="40">
+        </label>
+    </p>
+    <p><b>b:</b><br>
+        <label>
+            <input id="b" type="number" size="40">
+        </label>
+    </p>
+</form>
+<button onclick="clickTest()">Click me</button>
 </body>
 </html>
