--- a/src/main/resources/static/test/index2.html
+++ b/src/main/resources/static/test/index2.html
@@ -3,29 +3,29 @@
 <head>
     <link href="style.css" rel="stylesheet" type="text/css">
     <script src="script.js"></script>
-    <title>Home page</title>
+    <title>Addition of two numbers</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 <div class="test">
-    <p id="result">
-        RESULT
+    <p id="SUM">
+        SUM
     </p>
 </div>
 
 <form name="test" >
-    <p><b>a:</b><br>
+    <p><b>number1:</b><br>
         <label>
-            <input id="a" type="number" size="40">
+            <input id="number1" type="number" size="40">
         </label>
     </p>
-    <p><b>b:</b><br>
+    <p><b>number2:</b><br>
         <label>
-            <input id="b" type="number" size="40">
+            <input id="number2" type="number" size="40">
         </label>
     </p>
 </form>
-<button onclick="clickTest()">Click me</button>
+<button onclick="clickTest()">Calculate</button>
 </body>
 </html>
